--- a/VRChat/74/1359374.html
+++ b/VRChat/74/1359374.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xPqtquyYgQFe9vnkYBqFeaD/K1RaKvo2nIp5ZKsYQNc="></script>
+    "OoVIJbHsazG51Yullfk8QKu/rhO6gfZCGC+9EDVh+1Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料版有り/#VRoid】VRoid向け瞳テクスチャ「いつかのお菓子」","description":"主にVRoidで使用することを想定した瞳テクスチャ 4色です。\nVRoid Studioにて瞳のレイヤーにインポートすることで使用することができます。\n\n2枚目はVRoid Studio内で撮影された使用例となります。\n\n※無料版は1枚のpng\n支援版は4種類のpng＆PSDファイルがあります","url":"https://booth.pm/ja/items/1359374","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2f3e8cbe-432b-4410-9421-398d8e66a5a8/i/1359374/3b34518d-e03f-4d88-9d45-f506d7a6f2ba_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xPqtquyYgQFe9vnkYBqFeaD/K1RaKvo2nIp5ZKsYQNc="></script>
+    nonce="OoVIJbHsazG51Yullfk8QKu/rhO6gfZCGC+9EDVh+1Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1359374/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1359374/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
