--- a/VRChat/81/1338481.html
+++ b/VRChat/81/1338481.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1R3a0ijOnkh6THVn1LjxlsKuluUR8uM9k2URDZgH4is="></script>
+    "GEqJhoANwpCyo8cZmEyZNmATfi5ADuSgSCwTZw4KSW0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchatアバター　プリンツオイゲン３Dモデル","description":"VRchat用に最適なセッティングをされた、プリンツオイゲンのモデルです。\n\n■同梱ファイル\nUnityパッケージ\n\n■内容\nVRchat用リップシンクと表情モーフ（目、眉、口）\nオリジナルシェーダー（Mtoon改変）\nDynamicBone設定\n\n■必要なもの\nDynamicBoneアセット\n\n\n※モデル参考\nhttps://sketchfab.com/3d-models/prinz-eugen-2204d6fd12b546deb69a91621c08b6e1","url":"https://booth.pm/ja/items/1338481","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/03f84411-023f-444a-b82f-c5dd3aea3ea8/i/1338481/4dc21ff7-e6d8-4cb8-9233-54e72594833a_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1R3a0ijOnkh6THVn1LjxlsKuluUR8uM9k2URDZgH4is="></script>
+    nonce="GEqJhoANwpCyo8cZmEyZNmATfi5ADuSgSCwTZw4KSW0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -144,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +157,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -200,7 +200,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1338481/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1341
@@ -215,14 +215,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1338481/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1341
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
