--- a/VRChat/36/1356836.html
+++ b/VRChat/36/1356836.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PJC1HjPFjfIF0+t9RNUyRVMpAHY/HE8zyvcFk7Vh0Fg="></script>
+    "PfABlnu2y8/ai8X6LkayPlfV5iDjCFtYnJVAxJmfnqI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ドッガに行けそうなゲート装置","description":"二次創作です\n元ネタを尊重し,自己責任で使用してください\n金属部分ポリゴン数：2852\nプレハブポリゴン数：3620\n回転アニメーション付き\n商用利用と再配布はダメだよー","url":"https://booth.pm/ja/items/1356836","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/79e66929-95f2-4525-a40b-c5577701dfd1/i/1356836/72ed01f4-44bf-40c5-b39a-de3f5df38cb7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PJC1HjPFjfIF0+t9RNUyRVMpAHY/HE8zyvcFk7Vh0Fg="></script>
+    nonce="PfABlnu2y8/ai8X6LkayPlfV5iDjCFtYnJVAxJmfnqI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1356836/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               109
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1356836/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               109
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
