--- a/VRChat/24/1356524.html
+++ b/VRChat/24/1356524.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aWLUY1L6v7iosVpGQaNMc9ugFTo/19D4o4NJ9zAUbLI="></script>
+    "6sonWJ3UqyCkO2Jim6iibg5JVuDIR7KJxdN6RyQNBlk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ワールド設置推奨ボクセル３「ノートPC」","description":"ボクセルで作られたノートPCです。主にワールド設置を推奨します。あとなにやら差分が二つあるみたいですね・・・？\n[内容物]\n・voxファイル\n・objファイル\n・テクスチャファイル\n[利用規約]\n無し。好きに使いましょう。\n\n制作：桜の箱庭（カイム）\ntwitterID:plus515\nVRChatID：camio_53","url":"https://booth.pm/ja/items/1356524","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ef2009a1-23cb-48b4-a676-c380a8e1368a/i/1356524/d1a7f128-bafa-45ea-a899-637b29ad6650_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aWLUY1L6v7iosVpGQaNMc9ugFTo/19D4o4NJ9zAUbLI="></script>
+    nonce="6sonWJ3UqyCkO2Jim6iibg5JVuDIR7KJxdN6RyQNBlk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1356524/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1356524/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
