--- a/VRChat/59/1355359.html
+++ b/VRChat/59/1355359.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TepwxKLkL71YQ8m8g/13SoBcqEnaveiMvOTU9iHQcsI="></script>
+    "3rJIVtPYU3B3tsa2sjugJ2+fU26wGVEBQVFSzU1TbKk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"猫型ジャックオランタン（VRChat想定）","description":"猫型ジャックオランタンの3Dモデルです。\nこちらのモデルはVRChatでの使用を想定して作っていますが、禁止事項を守って頂ければVRChat以外でもご自由にご利用ください。\n\n\n内容物\n・Jack O Lantern.fbx（本体）\n・Jack O Lantern.png（テクスチャ）\n・Jack O Lantern UV.png（UV図）\n・ジャックオランタンUV説明図.png（テクスチャの簡単な説明）\n\n\n使用方法\nUnityでJack O Lantern.fbxを配置し、Jack O Lantern.pngをドラッグアンドドロップでモデルへ適用してください。\n\n\n禁止事項\n再配布（ゲームへの組み込み・VRCのペデスタル等はOK）\n政治的・宗教的・差別的な用途への利用","url":"https://booth.pm/ja/items/1355359","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4dfbeda-de4a-441b-ace4-484612b68061/i/1355359/cec7be1d-334e-43ff-a529-8738ed51c298_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TepwxKLkL71YQ8m8g/13SoBcqEnaveiMvOTU9iHQcsI="></script>
+    nonce="3rJIVtPYU3B3tsa2sjugJ2+fU26wGVEBQVFSzU1TbKk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1355359/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1355359/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
