--- a/VRChat/92/1353992.html
+++ b/VRChat/92/1353992.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yn/IioRKkpVD/F34D2mSUeE9oAKLJT77zIJ5sfvwMkg="></script>
+    "Gr44YTrs77TmSnyKSodQttctC0CE5KmUdAL5jsX6LEg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【サポート終了】竹流式オリジナル3Dモデル「デイヴィッド」","description":"　●　同梱物一覧　●\n\n・FBXデータ2個（素体込みフルセットFBX、素体干渉部削除済みFBX）\n・テクスチャ11枚（skin2種、alpha、kami、Bottom3種、Jacket2種、Swallowtail2種）\n・改変用psdファイル6個\n・Unitypackage\n・資料画像3枚\n・利用規約txt（本文）\n\n\n　●　仕様　●\n\nボーン構成：UnityのHumanoid規則に沿っています\nフルトラッキング：対応しています\nアイトラッキング：対応しています\n\n\n　★　テクスチャ改変・カスタマイズについて　★\n\n本モデルはユーザー側でお好みのパーツをチョイスし、カスタマイズした上でご利用いただけます。カスタマイズ方法に関しては同梱画像の資料1・資料2を参考にして下さい。\nまた、テクスチャのPSDファイルを同梱しているので、お好みの色調への変更・お好みの柄を貼り付けてのご利用が可能です。レイヤー名に従って基本色・影色を設定してあげて下さい。\nテクスチャの差し替えに関しては同梱画像の資料3をご参考ください。\n\n\n　★　シェーダーについて　★\n\n本モデルは服の裏面を作成しておりませんので、両面表示のシェーダーをご利用いただく必要があります。\n本モデルのUnitypackageで設定済みのシェーダーはユニティちゃんトゥーンシェーダー2.0.7.2です。\nDLもと：http://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n\n　★　Unitypackageインポート前の準備　★\n\n本モデル同梱のUnitypackageをインポートする前に、以下のアセットやシェーダーをインポートしてください。\n・VRCSDK最新版\n・ユニティちゃんトゥーンシェーダー2.0（UTS2）\n・ダイナミックボーン（なくても構いませんが、使わない場合は燕尾服の燕尾部分が揺れません）\n\n2022/8/7　サポート終了宣言　ご購入後のサポートは今後行われません\n\n2019/9/19 　Vケット3開催記念衣装（チャイナ服、メガネ）の追加\n\n2019/5/7　リリース\n\n竹流\n空創緑林館　http://airgreen.net/\nTwitter　@airgreennet\npixiv　https://www.pixiv.net/member.php?id=39794","url":"https://booth.pm/ja/items/1353992","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/7dbcb1ac-257b-4189-ab1a-4aa38dcc29f7/i/1353992/e61c093e-4e55-4692-a831-2593941428a6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yn/IioRKkpVD/F34D2mSUeE9oAKLJT77zIJ5sfvwMkg="></script>
+    nonce="Gr44YTrs77TmSnyKSodQttctC0CE5KmUdAL5jsX6LEg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1353992/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               72
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1353992/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               72
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
