--- a/VRChat/03/1353303.html
+++ b/VRChat/03/1353303.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NjFmCTFILBhGT+A7HCU/aRYQiS4xyci2cWx8PwRJnQQ="></script>
+    "anm7xQSvYb5oBXn6OZnjoPZuOxhFTngCwA4k2cacwvg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ルル","description":"オリジナルアバター【ルル】ver1.01\n\n\n夜空をイメージした女の子のルルちゃんです。\nぜひ可愛がってくださいー！\n\nこの子にぴったりなロゴはぜろりんさん(@sissyo40) に作っていただきました！\n\n\n制限があるわけではないですが、VRChatでアバターとして使用されることを想定しています\n\n\n【アップデート履歴】\nv1.01\n・ルルちゃん用にコピーしたRefrex Shader の名前が衝突する可能性があったので、別名に変更しました\n・素体入りFBXを同梱しました\n\n\n\n利用の注意\n\n◆商業利用について\n\n禁止事項に該当しない場合、可能です\n\n\n◆R-18・R-18Gへの利用について\n\n特に規制はありません。\n\n\n◆改変について\n\nデータの改変は自由です。\n\n\n◆著作権\n\n『ルル』に関係するこの配布データ及び改変したデータが持つ著作権は大元の製作者である『こおりみず』に帰属するものとします。\n\n\n◆禁止事項\n\nこのファイルに付属されている『ルル』のモデルデータ・テクスチャーデータそのままの再配付や販売はしないでください。\nある程度改変されたものについては大丈夫です。　大丈夫なのか心配でしたら『こおりみず』までご相談下さい。\n\n特定個人や団体への中傷を目的とした利用は禁止します。\n\n\n◆トラブルについて\n\n『こおりみず』は、本モデル『ルル』を使用したことによる金銭・機器・機会的トラブルの責任を一切負わないものとします。\n\nこの利用規約は予告なく変更・改定されることがあります。ご了承ください。","url":"https://booth.pm/ja/items/1353303","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1353303/3b7b22d9-3d97-4f81-a82a-e387f91d67b2_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NjFmCTFILBhGT+A7HCU/aRYQiS4xyci2cWx8PwRJnQQ="></script>
+    nonce="anm7xQSvYb5oBXn6OZnjoPZuOxhFTngCwA4k2cacwvg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1353303/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               323
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1353303/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               323
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
